--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>weather-app-main</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="bg-neutral-900 h-screen w-screen"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
